Fixed responsiveness on modals.  Removed pointer-events from flash messages, interfering with login on mobile.

--- a/main.css
+++ b/main.css
@@ -299,6 +299,7 @@ label {
     color: whitesmoke;
     border-radius: 5px;
     z-index: 3;
+    pointer-events: none;
 }
 .flashMessage-hidden {
     opacity: 0;
